--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ layout: none
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sarah Jobalia</title>
 <style>
+  p_center {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #c98f8c; /* pink background */
+    color: #4a2e2b;
+    text-align: center;
+  }
   body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -70,8 +77,8 @@ layout: none
   <div class="content">
     <p>I’m a PhD candidate in computer science at Stanford University, advised by Professor Ron Fedkiw. I am interested in the intersection of computer graphics and generative AI, and how scaffolding an understanding of natural phenomena with representative mathematical frameworks can improve realism in generated results. My current research focuses on generating editable hair grooms across a wide array of hair types- including very curly and afro-textured styles that often fail in generative hair pipelines. This has involved study not only in computer science, but also in biology, chemistry, hair sciences, and racial theory, and conversations with hair stylists, 3D artists, and video gaming communities.</p>
     <p>Over the course of my PhD I have been funded and supported by the <a href="https://www.fordfoundation.org/">Ford Foundation</a>, the <a href="https://vpge.stanford.edu/fellowships-funding/dare">DARE doctoral fellowship</a>, and the <a href="https://brown.stanford.edu/">Brown Institute for Media Innovation</a>. Additionally, I have been honored to be named a <a href="https://hai.stanford.edu/">Technology and Racial Equity Graduate Fellow</a> at Stanford, a <a href="https://www.wigraph.org/">WiGRAPH rising star</a>, and an <a href="https://emersoncollective.com/">Emerson Consequential Scholar</a>.</p>
-    <p>In addition to research, I care deeply about teaching and mentorship. I've independently mentored 17 students from high school to PhD in computer graphics research. Additionally, I've served twice as a primary instructor for <a href="https://graphics.stanford.edu/courses/cs148/">Introduction to Computer Graphics and Imaging</a> and served as a course assistant many times, twice being recognized by the department for outstanding work. I hope to continue working with students closely throughout my career.</p>
-    <p>I am currently looking for post-doctoral opportunities beginning in Fall of 2026!<br>You can contact me at sjobalia [at] stanford [dot] edu</p>
+    <p>In addition to research, I care deeply about teaching and mentorship. I've independently mentored 17 students from high school to PhD in computer graphics research. Additionally, I've served twice as a primary instructor for <a href="https://graphics.stanford.edu/courses/cs148/">Introduction to Computer Graphics and Imaging</a> and served as a course assistant many times, twice being recognized by the department for outstanding work. I hope to continue working with students closely throughout my career.</p_center>
+    <p_center>I am currently looking for post-doctoral opportunities beginning in Fall of 2026!<br>You can contact me at sjobalia [at] stanford [dot] edu</p>
     <div class="video">
       <iframe src="https://www.youtube.com/embed/2o-Y4l2dfVw" allowfullscreen></iframe>
     </div>
